--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+    <!-- <script src="https://sdk.cashfree.com/js/v3/cashfree-2023.03.07.js"></script> -->
+    <!-- <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script> -->
     <!-- <script type="text/javascript" src="https://dsomething.cloudfront.net/static/js/main.ec7f8972.js"></script> -->
 
     <title>
